source/adios2/toolkit/derived/parser/pregen-source/parser.output
State 11 conflicts: 2 reduce/reduce
State 26 conflicts: 2 reduce/reduce
State 27 conflicts: 2 reduce/reduce


Grammar

    0 $accept: lines $end

    1 lines: assignment "\n" lines
    2      | exp

    3 assignment: "identifier" "=" VARNAME
    4           | "identifier" "=" "identifier"
    5           | "identifier" "=" VARNAME "[" indices_list "]"
    6           | "identifier" "=" "identifier" "[" indices_list "]"

    7 exp: "number"
    8    | exp OPERATOR exp
    9    | "(" exp ")"
   10    | "identifier" "(" list ")"
   11    | "identifier" "[" indices_list "]"
   12    | "identifier"

   13 indices_list: ε
   14             | indices_list "," index
   15             | index

   16 index: ε
   17      | "number" ":" "number" ":" "number"
   18      | ":" "number" ":" "number"
   19      | "number" ":" ":" "number"
   20      | "number" ":" "number" ":"
   21      | "number" ":" "number"
   22      | ":" ":" "number"
   23      | ":" "number" ":"
   24      | ":" "number"
   25      | "number" ":" ":"
   26      | "number" ":"
   27      | "number"

   28 list: ε
   29     | exp "," list
   30     | exp


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    "=" (258) 3 4 5 6
    "," (259) 14 29
    ":" (260) 17 18 19 20 21 22 23 24 25 26
    "(" (261) 9 10
    ")" (262) 9 10
    "[" (263) 5 6 11
    "]" (264) 5 6 11
    "\n" (265) 1
    OPERATOR <std::string> (266) 8
    "identifier" <std::string> (267) 3 4 5 6 10 11 12
    VARNAME <std::string> (268) 3 5
    "number" <int> (269) 7 17 18 19 20 21 22 23 24 25 26 27


Nonterminals, with rules where they appear

    $accept (15)
        on left: 0
    lines (16)
        on left: 1 2
        on right: 0 1
    assignment (17)
        on left: 3 4 5 6
        on right: 1
    exp (18)
        on left: 7 8 9 10 11 12
        on right: 2 8 9 29 30
    indices_list <std::vector<std::tuple<int, int, int>>> (19)
        on left: 13 14 15
        on right: 5 6 11 14
    index <std::tuple<int, int, int>> (20)
        on left: 16 17 18 19 20 21 22 23 24 25 26 27
        on right: 14 15
    list <int> (21)
        on left: 28 29 30
        on right: 10 29


State 0

    0 $accept: • lines $end

    "("           shift, and go to state 1
    "identifier"  shift, and go to state 2
    "number"      shift, and go to state 3

    lines       go to state 4
    assignment  go to state 5
    exp         go to state 6


State 1

    9 exp: "(" • exp ")"

    "("           shift, and go to state 1
    "identifier"  shift, and go to state 7
    "number"      shift, and go to state 3

    exp  go to state 8


State 2

    3 assignment: "identifier" • "=" VARNAME
    4           | "identifier" • "=" "identifier"
    5           | "identifier" • "=" VARNAME "[" indices_list "]"
    6           | "identifier" • "=" "identifier" "[" indices_list "]"
   10 exp: "identifier" • "(" list ")"
   11    | "identifier" • "[" indices_list "]"
   12    | "identifier" •

    "="  shift, and go to state 9
    "("  shift, and go to state 10
    "["  shift, and go to state 11

    $default  reduce using rule 12 (exp)


State 3

    7 exp: "number" •

    $default  reduce using rule 7 (exp)


State 4

    0 $accept: lines • $end

    $end  shift, and go to state 12


State 5

    1 lines: assignment • "\n" lines

    "\n"  shift, and go to state 13


State 6

    2 lines: exp •
    8 exp: exp • OPERATOR exp

    OPERATOR  shift, and go to state 14

    $default  reduce using rule 2 (lines)


State 7

   10 exp: "identifier" • "(" list ")"
   11    | "identifier" • "[" indices_list "]"
   12    | "identifier" •

    "("  shift, and go to state 10
    "["  shift, and go to state 11

    $default  reduce using rule 12 (exp)


State 8

    8 exp: exp • OPERATOR exp
    9    | "(" exp • ")"

    ")"       shift, and go to state 15
    OPERATOR  shift, and go to state 14


State 9

    3 assignment: "identifier" "=" • VARNAME
    4           | "identifier" "=" • "identifier"
    5           | "identifier" "=" • VARNAME "[" indices_list "]"
    6           | "identifier" "=" • "identifier" "[" indices_list "]"

    "identifier"  shift, and go to state 16
    VARNAME       shift, and go to state 17


State 10

   10 exp: "identifier" "(" • list ")"

    "("           shift, and go to state 1
    "identifier"  shift, and go to state 7
    "number"      shift, and go to state 3

    $default  reduce using rule 28 (list)

    exp   go to state 18
    list  go to state 19


State 11

   11 exp: "identifier" "[" • indices_list "]"

    ":"       shift, and go to state 20
    "number"  shift, and go to state 21

    ","       reduce using rule 13 (indices_list)
    ","       [reduce using rule 16 (index)]
    "]"       reduce using rule 13 (indices_list)
    "]"       [reduce using rule 16 (index)]
    $default  reduce using rule 13 (indices_list)

    indices_list  go to state 22
    index         go to state 23


State 12

    0 $accept: lines $end •

    $default  accept


State 13

    1 lines: assignment "\n" • lines

    "("           shift, and go to state 1
    "identifier"  shift, and go to state 2
    "number"      shift, and go to state 3

    lines       go to state 24
    assignment  go to state 5
    exp         go to state 6


State 14

    8 exp: exp OPERATOR • exp

    "("           shift, and go to state 1
    "identifier"  shift, and go to state 7
    "number"      shift, and go to state 3

    exp  go to state 25


State 15

    9 exp: "(" exp ")" •

    $default  reduce using rule 9 (exp)


State 16

    4 assignment: "identifier" "=" "identifier" •
    6           | "identifier" "=" "identifier" • "[" indices_list "]"

    "["  shift, and go to state 26

    $default  reduce using rule 4 (assignment)


State 17

    3 assignment: "identifier" "=" VARNAME •
    5           | "identifier" "=" VARNAME • "[" indices_list "]"

    "["  shift, and go to state 27

    $default  reduce using rule 3 (assignment)


State 18

    8 exp: exp • OPERATOR exp
   29 list: exp • "," list
   30     | exp •

    ","       shift, and go to state 28
    OPERATOR  shift, and go to state 14

    $default  reduce using rule 30 (list)


State 19

   10 exp: "identifier" "(" list • ")"

    ")"  shift, and go to state 29


State 20

   18 index: ":" • "number" ":" "number"
   22      | ":" • ":" "number"
   23      | ":" • "number" ":"
   24      | ":" • "number"

    ":"       shift, and go to state 30
    "number"  shift, and go to state 31


State 21

   17 index: "number" • ":" "number" ":" "number"
   19      | "number" • ":" ":" "number"
   20      | "number" • ":" "number" ":"
   21      | "number" • ":" "number"
   25      | "number" • ":" ":"
   26      | "number" • ":"
   27      | "number" •

    ":"  shift, and go to state 32

    $default  reduce using rule 27 (index)


State 22

   11 exp: "identifier" "[" indices_list • "]"
   14 indices_list: indices_list • "," index

    ","  shift, and go to state 33
    "]"  shift, and go to state 34


State 23

   15 indices_list: index •

    $default  reduce using rule 15 (indices_list)


State 24

    1 lines: assignment "\n" lines •

    $default  reduce using rule 1 (lines)


State 25

    8 exp: exp • OPERATOR exp
    8    | exp OPERATOR exp •

    $default  reduce using rule 8 (exp)


State 26

    6 assignment: "identifier" "=" "identifier" "[" • indices_list "]"

    ":"       shift, and go to state 20
    "number"  shift, and go to state 21

    ","       reduce using rule 13 (indices_list)
    ","       [reduce using rule 16 (index)]
    "]"       reduce using rule 13 (indices_list)
    "]"       [reduce using rule 16 (index)]
    $default  reduce using rule 13 (indices_list)

    indices_list  go to state 35
    index         go to state 23


State 27

    5 assignment: "identifier" "=" VARNAME "[" • indices_list "]"

    ":"       shift, and go to state 20
    "number"  shift, and go to state 21

    ","       reduce using rule 13 (indices_list)
    ","       [reduce using rule 16 (index)]
    "]"       reduce using rule 13 (indices_list)
    "]"       [reduce using rule 16 (index)]
    $default  reduce using rule 13 (indices_list)

    indices_list  go to state 36
    index         go to state 23


State 28

   29 list: exp "," • list

    "("           shift, and go to state 1
    "identifier"  shift, and go to state 7
    "number"      shift, and go to state 3

    $default  reduce using rule 28 (list)

    exp   go to state 18
    list  go to state 37


State 29

   10 exp: "identifier" "(" list ")" •

    $default  reduce using rule 10 (exp)


State 30

   22 index: ":" ":" • "number"

    "number"  shift, and go to state 38


State 31

   18 index: ":" "number" • ":" "number"
   23      | ":" "number" • ":"
   24      | ":" "number" •

    ":"  shift, and go to state 39

    $default  reduce using rule 24 (index)


State 32

   17 index: "number" ":" • "number" ":" "number"
   19      | "number" ":" • ":" "number"
   20      | "number" ":" • "number" ":"
   21      | "number" ":" • "number"
   25      | "number" ":" • ":"
   26      | "number" ":" •

    ":"       shift, and go to state 40
    "number"  shift, and go to state 41

    $default  reduce using rule 26 (index)


State 33

   14 indices_list: indices_list "," • index

    ":"       shift, and go to state 20
    "number"  shift, and go to state 21

    $default  reduce using rule 16 (index)

    index  go to state 42


State 34

   11 exp: "identifier" "[" indices_list "]" •

    $default  reduce using rule 11 (exp)


State 35

    6 assignment: "identifier" "=" "identifier" "[" indices_list • "]"
   14 indices_list: indices_list • "," index

    ","  shift, and go to state 33
    "]"  shift, and go to state 43


State 36

    5 assignment: "identifier" "=" VARNAME "[" indices_list • "]"
   14 indices_list: indices_list • "," index

    ","  shift, and go to state 33
    "]"  shift, and go to state 44


State 37

   29 list: exp "," list •

    $default  reduce using rule 29 (list)


State 38

   22 index: ":" ":" "number" •

    $default  reduce using rule 22 (index)


State 39

   18 index: ":" "number" ":" • "number"
   23      | ":" "number" ":" •

    "number"  shift, and go to state 45

    $default  reduce using rule 23 (index)


State 40

   19 index: "number" ":" ":" • "number"
   25      | "number" ":" ":" •

    "number"  shift, and go to state 46

    $default  reduce using rule 25 (index)


State 41

   17 index: "number" ":" "number" • ":" "number"
   20      | "number" ":" "number" • ":"
   21      | "number" ":" "number" •

    ":"  shift, and go to state 47

    $default  reduce using rule 21 (index)


State 42

   14 indices_list: indices_list "," index •

    $default  reduce using rule 14 (indices_list)


State 43

    6 assignment: "identifier" "=" "identifier" "[" indices_list "]" •

    $default  reduce using rule 6 (assignment)


State 44

    5 assignment: "identifier" "=" VARNAME "[" indices_list "]" •

    $default  reduce using rule 5 (assignment)


State 45

   18 index: ":" "number" ":" "number" •

    $default  reduce using rule 18 (index)


State 46

   19 index: "number" ":" ":" "number" •

    $default  reduce using rule 19 (index)


State 47

   17 index: "number" ":" "number" ":" • "number"
   20      | "number" ":" "number" ":" •

    "number"  shift, and go to state 48

    $default  reduce using rule 20 (index)


State 48

   17 index: "number" ":" "number" ":" "number" •

    $default  reduce using rule 17 (index)
